--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,10 @@
 			<version>2.7.14</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.github.ben-manes.caffeine</groupId>
 			<artifactId>guava</artifactId>
 			<version>3.1.8</version>
